# download

./: .env.schema  .gitignore  .gitlab-ci.yml  Dockerfile  Jenkinsfile  README.md  coverage.xml  docker-compose.yaml  gunicorn_config.py  gunicorn_starter.sh  pyproject.toml  run.py
.github/workflows/: build-and-publish.yml  cicd.yml  run-tests.yml  trigger-jenkins.yml
app/: api_registry.py  config.py  main.py
app/commons/: download_manager.py  kafka_producer.py  locks.py
app/commons/data_providers/: redis.py
app/commons/download_manager/: dataset_download_manager.py  file_download_manager.py
app/commons/service_connection/: minio_client.py
app/models/: base_models.py  models_data_download.py
app/resources/: download_token_manager.py  error_handler.py  health_check.py  helpers.py
app/routers/v1/: api_data_download.py  api_health_check.py
app/routers/v2/: api_data_download.py  api_object_get.py
app/services/approval/: client.py  models.py
kubernetes/: dev-greenroom-deployment.yaml  dev-vre-deployment.yaml  staging-greenroom-deployment.yaml  staging-vre-deployment.yaml
tests/: conftest.py  pytest.ini
tests/commons/: test_dataset_download_manager.py  test_download_manager.py  test_file_download_manager.py  test_locks.py
tests/resources/: test_download_token.py
tests/routers/: test_root.py
tests/routers/v1/: test_api_data_download.py
tests/routers/v2/: test_dataset_download.py  test_dataset_file_pre_download.py  test_dataset_pre_download.py  test_object_get.py  test_pre_downlaod.py  test_pre_download.py  test_project_file_pre_download.py
(+2 files in other folders)
