[tool.poetry]
name = "service_download"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
anyio = "3.4.0"
fastapi-utils = "0.2.1"
uvicorn = "0.12.3"
gunicorn = "20.0.4"
uvloop = "0.14.0"
httptools = "0.1.1"
PyJWT = "1.4.2"
python-multipart = "0.0.5"
python-json-logger = "0.1.11"
pydantic = "1.8.2"
opentelemetry-exporter-jaeger = "1.6.2"
sqlalchemy = {extras = ["asyncio"], version = "^1.4.32"}
psycopg2-binary = "2.9.2"
asyncpg = "0.25.0"
aioredis = "^2.0.1"
aiofiles = "^0.8.0"
greenlet = "^1.1.2"
pytest-mock = "^3.7.0"
pytest-asyncio = "^0.18.3"
opentelemetry-instrumentation = "0.27b0"
opentelemetry-instrumentation-fastapi = "0.27b0"
opentelemetry-instrumentation-sqlalchemy = "0.27b0"
opentelemetry-instrumentation-requests = "0.27b0"
opentelemetry-instrumentation-asyncpg = "0.27b0"
opentelemetry-instrumentation-httpx = "0.27b0"
fastavro = "^1.5.2"
aiokafka = "^0.7.2"
pilot-platform-common = "^0.0.40"
fastapi-health = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
Faker = "11.3.0"
pytest-asyncio = "^0.18.1"
pytest-env = "0.6.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
async-asgi-testclient = "^1.4.9"
testcontainers = "^3.4.2"
pytest-httpx = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
